--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -19,7 +19,16 @@
 
 {% block content %}
 <div class="hosts">
-	<h1>Host {{host.address}} ({{host.hostname}}) <small>{% include 'storage/host/pagepart-controls.html' %}</small></h1>
+	<h1>
+		Host {{host.id}}: {{host.address}} ({{host.hostname}})
+		<small>
+			<a class="btn btn-xs btn-default" href="{{ url_for('storage.service_add_route', host_id=host.id) }}"><span class="glyphicon glyphicon-plus"></span> Service</a>
+			<a class="btn btn-xs btn-default" href="{{ url_for('storage.vuln_add_route', model_name='host', model_id=host.id) }}"><span class="glyphicon glyphicon-plus"></span> Vuln</a>
+			<a class="btn btn-xs btn-default" href="{{ url_for('storage.note_add_route', model_name='host', model_id=host.id) }}"><span class="glyphicon glyphicon-plus"></span> Note</a>
+			<a class="btn btn-xs btn-primary" href="{{ url_for('storage.host_edit_route', host_id=host.id) }}"><span class="glyphicon glyphicon-edit"></span> Edit</a>
+			{% with form=button_form, form_url=url_for('storage.host_delete_route', host_id=host.id) %}{% include 'button-delete.html' %}{% endwith %}
+		</small>
+	</h1>
 
 	<div>
 		<dl class="dl-horizontal">
