--- a/sner/server/templates/storage/vuln/view.html
+++ b/sner/server/templates/storage/vuln/view.html
@@ -2,15 +2,22 @@
 
 {% block content %}
 <div class="Vulns">
-	<h1>Vuln {{ vuln.id }}: {{ vuln.name }} <small>{% include 'storage/vuln/pagepart-controls.html' %}</small></h1>
+	<h1>
+		Vuln {{ vuln.id }}: {{ vuln.name }}
+		<small>
+			<a class="btn btn-xs btn-primary" href="{{ url_for('storage.vuln_edit_route', vuln_id=vuln.id) }}"><span class="glyphicon glyphicon-edit"></span></a>
+			{% with form=button_form, form_url=url_for('storage.vuln_delete_route', vuln_id=vuln.id) %}{% include 'button-delete.html' %}{% endwith %}
+		</small>
+	</h1>
 
 	<div>
 		<dl class="dl-horizontal">
-		<dt>host</dt><dd>{% with host_id=vuln.host.id, host_address=vuln.host.address %}{% include "storage/host/pagepart-address_link.html" %}{% endwith %} ({{ vuln.host.hostname }})</dd>
+		<dt>host address</dt><dd class="render_hbs" data-hbs="pagepart_host_link" data-hbs_context='{{ {'host_id': vuln.host.id, 'host_address': vuln.host.address}|tojson }}'>{{ vuln.host.address }}</dd>
+		<dt>host hostname</dt><dd>{{ vuln.host.hostname }}</dd>
 		<dt>service</dt><dd>{{ vuln.service }}</dd>
 		<dt>xtype</dt><dd>{{ vuln.xtype }}</dd>
-		<dt>severity</dt><dd>{% with severity=vuln.severity %}{% include 'storage/vuln/pagepart-severity_label.html' %}{% endwith %}</dd>
-		<dt>refs</dt><dd>{% include 'storage/vuln/pagepart-refs.html' %}</dd>
+		<dt>severity</dt><dd class="render_hbs" data-hbs="pagepart_severity_label" data-hbs_context='{{ {'severity': vuln.severity|string}|tojson }}'>{{ vuln.severity }}</dd>
+		<dt>refs</dt><dd class="render_hbs" data-hbs="pagepart_vuln_refs" data-hbs_context='{{ {'refs': vuln.refs}|tojson }}'>{{ vuln.refs }}</dd>
 		<dt>comment</dt><dd>{{ vuln.comment }}</dd>
 		</dl>
 	</div>
