storage: simplify controls colors

--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -38,10 +38,10 @@
 	<div id="vuln_list_table_toolbar">
 		<button type="button" class="btn btn-xs btn-default abutton_selectall">All</button>
 		<button type="button" class="btn btn-xs btn-default abutton_selectnone">None</button>
-		<button type="button" class="btn btn-xs btn-primary abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</button>
-		<button type="button" class="btn btn-xs btn-primary abutton_tagmulti" data-tag="report"><span class="glyphicon glyphicon-tag"></span> Report</button>
-		<button type="button" class="btn btn-xs btn-primary abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> TODO</button>
-		<button type="button" class="btn btn-xs btn-danger abutton_deletemulti"><span class="glyphicon glyphicon-trash"></span></button>
+		<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</button>
+		<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="report"><span class="glyphicon glyphicon-tag"></span> Report</button>
+		<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> TODO</button>
+		<button type="button" class="btn btn-xs btn-default abutton_deletemulti"><span class="glyphicon glyphicon-trash"></span></button>
 	</div>
 
 	<table id="vuln_list_table" class="table table-hover table-responsive table-condensed"></table>
