--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -23,7 +23,7 @@
 
 {% block content %}
 <div class="hosts">
-	<h1>Hosts list <a class="btn btn-xs btn-success" href="{{ url_for('storage.host_add_route') }}"><span class="glyphicon glyphicon-plus"></span> Add</a></h1>
+	<h1>Hosts list <a class="btn btn-xs btn-default" href="{{ url_for('storage.host_add_route') }}"><span class="glyphicon glyphicon-plus"></span> Add</a></h1>
 
 	<table id="host_list_table" class="table table-hover table-responsive table-condensed"></table>
 </div>
