--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -25,7 +25,7 @@
 			<a class="btn btn-xs btn-default" href="{{ url_for('storage.service_add_route', host_id=host.id) }}"><span class="glyphicon glyphicon-plus"></span> Service</a>
 			<a class="btn btn-xs btn-default" href="{{ url_for('storage.vuln_add_route', model_name='host', model_id=host.id) }}"><span class="glyphicon glyphicon-plus"></span> Vuln</a>
 			<a class="btn btn-xs btn-default" href="{{ url_for('storage.note_add_route', model_name='host', model_id=host.id) }}"><span class="glyphicon glyphicon-plus"></span> Note</a>
-			<a class="btn btn-xs btn-primary" href="{{ url_for('storage.host_edit_route', host_id=host.id) }}"><span class="glyphicon glyphicon-edit"></span> Edit</a>
+			<a class="btn btn-xs btn-default" href="{{ url_for('storage.host_edit_route', host_id=host.id) }}"><span class="glyphicon glyphicon-edit"></span></a>
 			{% with form=button_form, form_url=url_for('storage.host_delete_route', host_id=host.id) %}{% include 'button-delete.html' %}{% endwith %}
 		</small>
 	</h1>
@@ -77,10 +77,10 @@
 			<div id="host_view_vuln_table_toolbar">
 				<button type="button" class="btn btn-xs btn-default abutton_selectall">All</button>
 				<button type="button" class="btn btn-xs btn-default abutton_selectnone">None</button>
-				<button type="button" class="btn btn-xs btn-primary abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</button>
-				<button type="button" class="btn btn-xs btn-primary abutton_tagmulti" data-tag="report"><span class="glyphicon glyphicon-tag"></span> Report</button>
-				<button type="button" class="btn btn-xs btn-primary abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> TODO</button>
-				<button type="button" class="btn btn-xs btn-danger abutton_deletemulti"><span class="glyphicon glyphicon-trash"></span></button>
+				<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</button>
+				<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="report"><span class="glyphicon glyphicon-tag"></span> Report</button>
+				<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> TODO</button>
+				<button type="button" class="btn btn-xs btn-default abutton_deletemulti"><span class="glyphicon glyphicon-trash"></span></button>
 			</div>
 			<table id="host_view_vuln_table" class="table table-hover table-responsive table-condensed" width="100%"></table>
 			<script type="text/javascript">
