--- a/sner/server/templates/storage/vuln/view.html
+++ b/sner/server/templates/storage/vuln/view.html
@@ -5,7 +5,7 @@
 	<h1>
 		Vuln {{ vuln.id }}: {{ vuln.name }}
 		<small>
-			<a class="btn btn-xs btn-primary" href="{{ url_for('storage.vuln_edit_route', vuln_id=vuln.id) }}"><span class="glyphicon glyphicon-edit"></span></a>
+			<a class="btn btn-xs btn-default" href="{{ url_for('storage.vuln_edit_route', vuln_id=vuln.id) }}"><span class="glyphicon glyphicon-edit"></span></a>
 			{% with form=button_form, form_url=url_for('storage.vuln_delete_route', vuln_id=vuln.id) %}{% include 'button-delete.html' %}{% endwith %}
 		</small>
 	</h1>
