--- a/sner/server/templates/scheduler/task/list.html
+++ b/sner/server/templates/scheduler/task/list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="tasks">
-	<h1>Tasks list <a class="btn btn-xs btn-success" href="{{ url_for('scheduler.task_add_route') }}"><span class="glyphicon glyphicon-plus"></span> Add</a></h1>
+	<h1>Tasks list <a class="btn btn-xs btn-default" href="{{ url_for('scheduler.task_add_route') }}"><span class="glyphicon glyphicon-plus"></span> Add</a></h1>
 
 	<table id="tasks_table" class="datatable_static table table-hover table-responsive">
 	<thead>
@@ -23,7 +23,7 @@
 			<td>{{ task.params }}</td>
 			<td>
 				<a class="btn btn-xs btn-default" href="{{ url_for('scheduler.queue_add_route', task_id=task.id) }}"><span class="glyphicon glyphicon-plus"></span> Queue</a>
-				<a class="btn btn-xs btn-primary" href="{{ url_for('scheduler.task_edit_route', task_id=task.id) }}"><span class="glyphicon glyphicon-edit"></span> Edit</a>
+				<a class="btn btn-xs btn-default" href="{{ url_for('scheduler.task_edit_route', task_id=task.id) }}"><span class="glyphicon glyphicon-edit"></span> Edit</a>
 				{% with form=button_form, form_url=url_for('scheduler.task_delete_route', task_id=task.id) %}{% include 'button-delete.html' %}{% endwith %}
 			</td>
 		</tr>
