--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -74,7 +74,7 @@
 
 
 		<div role="tabpanel" class="tab-pane" id="vulns">
-			<div id="host_view_vuln_table_toolbar">
+			<div id="host_view_vuln_table_toolbar" class="dt_toolbar">
 				<button type="button" class="btn btn-xs btn-default abutton_selectall">All</button>
 				<button type="button" class="btn btn-xs btn-default abutton_selectnone">None</button>
 				<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</button>
