--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -26,6 +26,6 @@
 <div class="notes">
 	<h1>Notes list</h1>
 
-	<table id="note_list_table" class="table table-hover table-responsive table-condensed"></table>
+	<table id="note_list_table" class="table table-hover table-responsive table-condensed" width="100%"></table>
 </div>
 {% endblock %}
