--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -35,7 +35,7 @@
 <div class="vulns">
 	<h1>Vulns list</h1>
 
-	<div id="vuln_list_table_toolbar">
+	<div id="vuln_list_table_toolbar" class="dt_toolbar">
 		<button type="button" class="btn btn-xs btn-default abutton_selectall">All</button>
 		<button type="button" class="btn btn-xs btn-default abutton_selectnone">None</button>
 		<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</button>
