general: delete buttons styling to red

--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -80,7 +80,7 @@
 				<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</button>
 				<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="report"><span class="glyphicon glyphicon-tag"></span> Report</button>
 				<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> TODO</button>
-				<button type="button" class="btn btn-xs btn-default abutton_deletemulti"><span class="glyphicon glyphicon-trash"></span></button>
+				<button type="button" class="btn btn-xs btn-default abutton_deletemulti"><span class="glyphicon glyphicon-trash text-alert"></span></button>
 			</div>
 			<table id="host_view_vuln_table" class="table table-hover table-responsive table-condensed" width="100%"></table>
 			<script type="text/javascript">
