--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -50,139 +50,9 @@
 	</style>
 
 
-	{% raw %}
-	<script id="pagepart-host_link.hbs" type="text/x-handlebars-template">
-		<a href="{{> host_view_route host_id=host_id}}">{{host_address}}</a>
-	</script>
-	<script id="pagepart-host_controls.hbs" type="text/x-handlebars-template">
-		<a class="btn btn-xs btn-default" href="{{> service_add_route host_id=id}}"><span class="glyphicon glyphicon-plus"></span> Service</a>
-		<a class="btn btn-xs btn-default" href="{{> vuln_add_route model_name='host' model_id=id}}"><span class="glyphicon glyphicon-plus"></span> Vuln</a>
-		<a class="btn btn-xs btn-default" href="{{> note_add_route model_name='host' model_id=id}}"><span class="glyphicon glyphicon-plus"></span> Note</a>
-		<a class="btn btn-xs btn-default" href="{{> host_edit_route host_id=id}}"><span class="glyphicon glyphicon-edit"></span></a>
-		<a class="btn btn-xs btn-default abutton_delete_by_url" data-url="{{> host_delete_route host_id=id}}"><span class="glyphicon glyphicon-trash text-alert"></span></a>
-	</script>
-
-	<script id="pagepart-service_controls.hbs" type="text/x-handlebars-template">
-		<a class="btn btn-xs btn-default" href="{{> vuln_add_route model_name='service' model_id=id}}"><span class="glyphicon glyphicon-plus"></span> Vuln</a>
-		<a class="btn btn-xs btn-default" href="{{> note_add_route model_name='service' model_id=id}}"><span class="glyphicon glyphicon-plus"></span> Note</a>
-		<a class="btn btn-xs btn-default" href="{{> service_edit_route service_id=id}}"><span class="glyphicon glyphicon-edit"></span></a>
-		<a class="btn btn-xs btn-default abutton_delete_by_url" data-url="{{> service_delete_route service_id=id}}"><span class="glyphicon glyphicon-trash text-alert"></span></a>
-	</script>
-
-	<script id="pagepart-vuln_link.hbs" type="text/x-handlebars-template">
-		<a href="{{> vuln_view_route vuln_id=id}}">{{name}}</a>
-	</script>
-	<script id="pagepart-severity_label.hbs" type="text/x-handlebars-template">
-		<span class="label {{color_for_severity severity}}">{{severity}}</span>
-	</script>
-	<script id="pagepart-vuln_refs.hbs" type="text/x-handlebars-template">
-	{{#each refs}}
-		<a href="{{url_for_ref this}}">{{text_for_ref this}}</a>
-	{{/each}}
-	</script>
-	<script id="pagepart-vuln_controls.hbs" type="text/x-handlebars-template">
-		<a class="btn btn-xs btn-default" href="{{> vuln_edit_route vuln_id=id}}"><span class="glyphicon glyphicon-edit"></span></a>
-		<a class="btn btn-xs btn-default abutton_delete_by_url" data-url="{{> vuln_delete_route vuln_id=id}}"><span class="glyphicon glyphicon-trash text-alert"></span></a>
-	</script>
-
-	<script id="pagepart-note_controls.hbs" type="text/x-handlebars-template">
-		<a class="btn btn-xs btn-default" href="{{> note_view_route note_id=id}}"><span class="glyphicon glyphicon-eye-open"></span></a>
-		<a class="btn btn-xs btn-default" href="{{> note_edit_route note_id=id}}"><span class="glyphicon glyphicon-edit"></span></a>
-		<a class="btn btn-xs btn-default abutton_delete_by_url" data-url="{{> note_delete_route note_id=id}}"><span class="glyphicon glyphicon-trash text-alert"></span></a>
-	</script>
-	{% endraw %}
 	<script type="text/javascript">
-		// ajaxed multiaction and rendering enhanced datatables
+		// ui helpers and callbacks
 		//
-
-		/// handlebars pageparts and helpers
-		///
-
-		/*
-		 * generate url for ref
-		 */
-		Handlebars.registerHelper('url_for_ref', function(ref) {
-			var ret = ref;
-
-			var matched = ref.match(/(.*?)\-(.*)/);
-			if (matched) {
-				var [ident, data] = [matched[1], matched[2]];
-				switch (ident) {
-					case 'URL': ret = data; break;
-					case 'CVE': ret = 'https://cvedetails.com/cve/CVE-'+data; break;
-					case 'NSS': ret = 'https://www.tenable.com/plugins/nessus/'+data; break;
-					case 'BID': ret = 'http://www.securityfocus.com/bid/'+data; break;
-					case 'CERT': ret = 'https://www.kb.cert.org/vuls/id/'+data; break;
-					case 'EDB': ret = 'https://www.exploit-db.com/exploits/'+data.replace('ID-', ''); break;
-					case 'SN': ret = "{{ url_for('storage.note_view_route', note_id='REPLACE') }}".replace('REPLACE', data); break;
-					default: ret = '#'; break;
-				}
-			}
-
-			return ret;
-		});
-
-		/*
-		 * generate text for ref
-		 */
-		Handlebars.registerHelper('text_for_ref', function(ref) { return (ref.startsWith('URL-')) ? 'URL' : ref; });
-
-		/*
-		 * get class for severity label
-		 */
-		Handlebars.registerHelper('color_for_severity', function(severity) {
-			var colors = {'unknown': 'label-default', 'info': 'label-primary', 'low': 'label-success', 'medium': 'label-info', 'high': 'label-warning', 'critical': 'label-danger'};
-			return (severity in colors) ? colors[severity] : 'label-default';
-		});
-
-		/*
-		 * hbs partials to pass flask endpoint uris to hbs templates
-		 */
-		Handlebars.registerPartial('host_view_route', "{{ url_for('storage.host_view_route', host_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{host_id}}{%endraw%}'));
-		Handlebars.registerPartial('host_edit_route', "{{ url_for('storage.host_edit_route', host_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{host_id}}{%endraw%}'));
-		Handlebars.registerPartial('host_delete_route', "{{ url_for('storage.host_delete_route', host_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{host_id}}{%endraw%}'));
-
-		Handlebars.registerPartial('service_add_route', "{{ url_for('storage.service_add_route', host_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{host_id}}{%endraw%}'));
-		Handlebars.registerPartial('service_edit_route', "{{ url_for('storage.service_edit_route', service_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{service_id}}{%endraw%}'));
-		Handlebars.registerPartial('service_delete_route', "{{ url_for('storage.service_delete_route', service_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{service_id}}{%endraw%}'));
-
-		Handlebars.registerPartial('vuln_add_route',
-			"{{ url_for('storage.vuln_add_route', model_name='REPLACE1', model_id='REPLACE2') }}"
-				.replace('REPLACE1', '{%raw%}{{model_name}}{%endraw%}')
-				.replace('REPLACE2', '{%raw%}{{model_id}}{%endraw%}')
-		);
-		Handlebars.registerPartial('vuln_view_route', "{{ url_for('storage.vuln_view_route', vuln_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{vuln_id}}{%endraw%}'));
-		Handlebars.registerPartial('vuln_edit_route', "{{ url_for('storage.vuln_edit_route', vuln_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{vuln_id}}{%endraw%}'));
-		Handlebars.registerPartial('vuln_delete_route', "{{ url_for('storage.vuln_delete_route', vuln_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{vuln_id}}{%endraw%}'));
-
-		Handlebars.registerPartial('note_add_route',
-			"{{ url_for('storage.note_add_route', model_name='REPLACE1', model_id='REPLACE2') }}"
-				.replace('REPLACE1', '{%raw%}{{model_name}}{%endraw%}')
-				.replace('REPLACE2', '{%raw%}{{model_id}}{%endraw%}')
-		);
-		Handlebars.registerPartial('note_view_route', "{{ url_for('storage.note_view_route', note_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{note_id}}{%endraw%}'));
-		Handlebars.registerPartial('note_edit_route', "{{ url_for('storage.note_edit_route', note_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{note_id}}{%endraw%}'));
-		Handlebars.registerPartial('note_delete_route', "{{ url_for('storage.note_delete_route', note_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{note_id}}{%endraw%}'));
-
-		/*
-		 * hbs templates
-		 */
-		var pagepart_host_link = Handlebars.compile(document.getElementById('pagepart-host_link.hbs').innerHTML);
-		var pagepart_host_controls = Handlebars.compile(document.getElementById('pagepart-host_controls.hbs').innerHTML);
-
-		var pagepart_service_controls = Handlebars.compile(document.getElementById('pagepart-service_controls.hbs').innerHTML);
-
-		var pagepart_vuln_link = Handlebars.compile(document.getElementById('pagepart-vuln_link.hbs').innerHTML);
-		var pagepart_severity_label = Handlebars.compile(document.getElementById('pagepart-severity_label.hbs').innerHTML);
-		var pagepart_vuln_refs = Handlebars.compile(document.getElementById('pagepart-vuln_refs.hbs').innerHTML);
-		var pagepart_vuln_controls = Handlebars.compile(document.getElementById('pagepart-vuln_controls.hbs').innerHTML);
-
-		var pagepart_note_controls = Handlebars.compile(document.getElementById('pagepart-note_controls.hbs').innerHTML);
-
-
-
-		/// ui helpers and callbacks
-		///
 
 		/*
 		 * will rerender element with hbs acording to data attributes
@@ -256,7 +126,7 @@
 		}
 
 
-		/// datatables helpers
+		/// ajaxed datatables helpers
 		///
 		/*
 		 * datatables select helper, returns array of selected rows/data ids
@@ -319,10 +189,9 @@
 				this.find('td a.abutton_delete_by_url').on('click', {'dt': this.api()}, action_delete_by_url);
 			}
 		};
-	</script>
 
 
-	<script type="text/javascript">
+
 		// simple static static datatables
 		//
 		var datatable_static_options = {
@@ -334,23 +203,24 @@
 			'paging': false,
 			'info': false
 		};
-		$(document).ready(function() {
-			if (typeof datatable_static_custom !== 'undefined') {
-				datatable_static_options = $.extend({}, datatable_static_options, datatable_static_custom);
-			}
-			$('.datatable_static').DataTable(datatable_static_options);
-		});
 
 
 
 		// common startups
 		//
 		$(document).ready(function() {
+			if (typeof datatable_static_custom !== 'undefined') {
+				datatable_static_options = $.extend({}, datatable_static_options, datatable_static_custom);
+			}
+			$('.datatable_static').DataTable(datatable_static_options);
+
 			$('.tageditor').tagEditor({'delimiter': '\n'});
 			$('.render_hbs').each(function(index, elem) { render_hbs(elem); });
 		});
 	</script>
 
+
+	{% include 'storage/pageparts.html' %}
 
 	{% block style %}{% endblock %}
 	{% block script %}{% endblock %}
