--- a/sner/server/templates/storage/note/view.html
+++ b/sner/server/templates/storage/note/view.html
@@ -12,7 +12,7 @@
 
 	<div>
 		<dl class="dl-horizontal">
-		<dt>host address</dt><dd class="render_hbs" data-hbs="pagepart_host_link" data-hbs_context='{{ {'host_id': note.host.id, 'host_address': note.host.address}|tojson }}'>{{ note.host.address }}</dd>
+		<dt>host address</dt><dd class="render_hbs" data-hbs="storage_pagepart_host_link" data-hbs_context='{{ {'host_id': note.host.id, 'host_address': note.host.address}|tojson }}'>{{ note.host.address }}</dd>
 		<dt>host hostname</dt><dd>{{ note.host.hostname }}</dd>
 		<dt>service</dt><dd>{{ note.service }}</dd>
 		<dt>xtype</dt><dd>{{ note.xtype }}</dd>
