--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -8,16 +8,16 @@
 			dt_column_select(),
 			dt_column('id'),
 			dt_column('host_id', {'visible': false}),
-			dt_column('host_address', {'render': function (data, type, row, meta) { return pagepart_host_link(row); }}),
+			dt_column('host_address', {'render': function (data, type, row, meta) { return storage_pagepart_host_link(row); }}),
 			dt_column('host_hostname'),
 			dt_column('service'),
-			dt_column('name', {'render': function (data, type, row, meta) { return pagepart_vuln_link(row); }}),
+			dt_column('name', {'render': function (data, type, row, meta) { return storage_pagepart_vuln_link(row); }}),
 			dt_column('xtype'),
-			dt_column('severity', {'render': function (data, type, row, meta) { return pagepart_severity_label(row); }}),
-			dt_column('refs', {'render': function (data, type, row, meta) { return pagepart_vuln_refs(row); }}),
+			dt_column('severity', {'render': function (data, type, row, meta) { return storage_pagepart_severity_label(row); }}),
+			dt_column('refs', {'render': function (data, type, row, meta) { return storage_pagepart_vuln_refs(row); }}),
 			dt_column('tags'),
 			dt_column('comment'),
-			dt_column_buttons(pagepart_vuln_controls)
+			dt_column_buttons(storage_pagepart_vuln_controls)
 		]
 	};
 	$(document).ready(function() {
