general, storage: search filter usage

--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -10,6 +10,7 @@
 			dt_column('hostname'),
 			dt_column('os'),
 			dt_column('nr_svcs'),
+			dt_column('nr_vulns'),
 			dt_column('nr_notes'),
 			dt_column('comment'),
 			dt_column_buttons(storage_pagepart_host_controls)
