--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -100,7 +100,8 @@
 						dt_column('tags'),
 						dt_column('comment'),
 						dt_column_buttons(storage_pagepart_vuln_controls)
-					]
+					],
+					'select': {'style': 'multi', 'selector': 'td:first-child'}
 				};
 				$(document).ready(function() {
 					var dt_host_view_vuln_table = $('#host_view_vuln_table').DataTable($.extend({}, dt_ajax_options, dt_host_view_vuln_table_options));
