--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -26,7 +26,7 @@
 
 {% block content %}
 <div class="services">
-	<h1>Services list{% if 'filter' in request.args %} <small><a class="btn btn-info" href="{{ url_for('storage.service_list_route') }}">unfilter</a></small>{% endif %}</h1>
+	<h1>Services list{% if 'filter' in request.args %} <small><a class="btn btn-xs btn-info" href="{{ url_for('storage.service_list_route') }}">unfilter</a></small>{% endif %}</h1>
 
 	<table id="service_list_table" class="table table-hover table-responsive table-condensed"></table>
 </div>
