--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -3,7 +3,7 @@
 {% block script %}
 <script type="text/javascript">
 	var dt_vuln_list_table_options = {
-		'ajax': {'url': "{{ url_for('storage.vuln_list_json_route') }}", 'method': 'POST'},
+		'ajax': {'url': "{{ url_for('storage.vuln_list_json_route', **request.args) }}", 'method': 'POST'},
 		'columns': [
 			dt_column_select(),
 			dt_column('id'),
@@ -34,7 +34,7 @@
 
 {% block content %}
 <div class="vulns">
-	<h1>Vulns list</h1>
+	<h1>Vulns list{% if 'filter' in request.args %} <small><a class="btn btn-xs btn-info" href="{{ url_for('storage.vuln_list_route') }}">unfilter</a></small>{% endif %}</h1>
 
 	<div id="vuln_list_table_toolbar" class="dt_toolbar">
 		<button type="button" class="btn btn-xs btn-default abutton_selectall">All</button>
