--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -37,12 +37,21 @@
 	<h1>Vulns list{% if 'filter' in request.args %} <small><a class="btn btn-xs btn-info" href="{{ url_for('storage.vuln_list_route') }}">unfilter</a></small>{% endif %}</h1>
 
 	<div id="vuln_list_table_toolbar" class="dt_toolbar">
-		<button type="button" class="btn btn-xs btn-default abutton_selectall">All</button>
-		<button type="button" class="btn btn-xs btn-default abutton_selectnone">None</button>
-		<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</button>
-		<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="report"><span class="glyphicon glyphicon-tag"></span> Report</button>
-		<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> TODO</button>
-		<button type="button" class="btn btn-xs btn-default abutton_deletemulti"><span class="glyphicon glyphicon-trash text-alert"></span></button>
+		<div class="btn-group" role="group">
+			<a class="btn btn-xs btn-default abutton_selectall">All</a>
+			<a class="btn btn-xs btn-default abutton_selectnone">None</a>
+			<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</a>
+			<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="report"><span class="glyphicon glyphicon-tag"></span> Report</a>
+			<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> TODO</a>
+			<a class="btn btn-xs btn-default abutton_deletemulti"><span class="glyphicon glyphicon-trash text-alert"></span></a>
+		</div>
+
+		<div class="btn-group" role="group">
+			<a class="btn btn-xs btn-default" href="{{ url_for('storage.vuln_list_route', filter='Vuln.tags is_null ""') }}">Not tagged</a>
+			<a class="btn btn-xs btn-default" href="{{ url_for('storage.vuln_list_route', filter='Vuln.tags is_not_null ""') }}">Tagged</a>
+			<a class="btn btn-xs btn-default" href="{{ url_for('storage.vuln_list_route', filter='Vuln.tags is_null "" OR (Vuln.tags not_all "report" AND Vuln.tags not_all "info")') }}">Exclude reviewed</a>
+			<a class="btn btn-xs btn-default" href="{{ url_for('storage.vuln_list_route', filter='Vuln.tags any "report"') }}">Only <span class="glyphicon glyphicon-tag"></span> Report</a>
+		</div>
 	</div>
 
 	<table id="vuln_list_table" class="table table-hover table-responsive table-condensed"></table>
