--- a/sner/server/templates/storage/vuln/grouped.html
+++ b/sner/server/templates/storage/vuln/grouped.html
@@ -28,7 +28,7 @@
 			<a class="btn btn-xs btn-default" href="{{ url_for('storage.vuln_grouped_route', filter='Vuln.tags is_null ""') }}">Not tagged</a>
 			<a class="btn btn-xs btn-default" href="{{ url_for('storage.vuln_grouped_route', filter='Vuln.tags is_not_null ""') }}">Tagged</a>
 			<a class="btn btn-xs btn-default" href="{{ url_for('storage.vuln_grouped_route', filter='Vuln.tags is_null "" OR (Vuln.tags not_all "report" AND Vuln.tags not_all "info")') }}">Exclude reviewed</a>
-			<a class="btn btn-xs btn-default" href="{{ url_for('storage.vuln_grouped_route', filter='Vuln.tags any "report"') }}">Only <span class="glyphicon glyphicon-tag"></span> Report</a>
+			<a class="btn btn-xs btn-default" href="{{ url_for('storage.vuln_grouped_route', filter='Vuln.tags any "report"') }}">Only Report</a>
 		</div>
 	</div>
 
