--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -75,12 +75,12 @@
 
 		<div role="tabpanel" class="tab-pane" id="vulns">
 			<div id="host_view_vuln_table_toolbar" class="dt_toolbar">
-				<button type="button" class="btn btn-xs btn-default abutton_selectall">All</button>
-				<button type="button" class="btn btn-xs btn-default abutton_selectnone">None</button>
-				<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</button>
-				<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="report"><span class="glyphicon glyphicon-tag"></span> Report</button>
-				<button type="button" class="btn btn-xs btn-default abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> TODO</button>
-				<button type="button" class="btn btn-xs btn-default abutton_deletemulti"><span class="glyphicon glyphicon-trash text-alert"></span></button>
+				<a class="btn btn-xs btn-default abutton_selectall">All</a>
+				<a class="btn btn-xs btn-default abutton_selectnone">None</a>
+				<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</a>
+				<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="report"><span class="glyphicon glyphicon-tag"></span> Report</a>
+				<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> TODO</a>
+				<a class="btn btn-xs btn-default abutton_deletemulti"><span class="glyphicon glyphicon-trash text-alert"></span></a>
 			</div>
 			<table id="host_view_vuln_table" class="table table-hover table-responsive table-condensed" width="100%"></table>
 			<script type="text/javascript">
